@@ -13,9 +13,8 @@
                     </div>
                 </div>
                 <div class="title-wrap">
-
                     <div class="task-title">
-                        <a class="title" href="#" @click.prevent="getSingleTask(task)">{{ ucfirst(task.title)}}</a>
+                        <a class="title" href="#" @click.prevent="getSingleTask(task)" v-html="ucfirst(task.title)"></a>
                     </div>  
                 </div> 
                 
